@@ -160,6 +160,8 @@ IMLibLocalContext = {
     }
 };
 
+INTERMediatorLib.setup();
+
 IMLibKeyEventDispatch = {
     dispatchTable: {},
 
